@@ -1,3 +1,12 @@
+2011-11-14  John Yani  <vanuan@gmail.com>
+
+        new-run-webkit-tests should not be locale dependent https://bugs.webkit.org/show_bug.cgi?id=68691
+        Override LOCALE to en_US.
+
+        Reviewed by Eric Seidel.
+
+        * Scripts/webkitpy/layout_tests/port/base.py:
+
 2011-11-14  Julien Chaffraix  <jchaffraix@webkit.org>
 
         [Chromium] build-webkit silently drops the features flags
